[tool.poetry]
name = "first-fastapi"
version = "0.1.0"
description = ""
authors = ["Evan <evanmschultz@gmail.com>"]
readme = "README.md"
packages = [{include = "first_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
